src/objects/Informacion_comite__c.object
<CustomObject>
    <fields>
        <fullName>Acierta_CD_Cliente_deudor__c</fullName>
        <label>Acierta CD</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acierta_CD_Codeudor_1__c</fullName>
        <label>Acierta CD</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acierta_CD_Codeudor_2__c</fullName>
        <label>Acierta CD</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acierta_CD_Codeudor_3__c</fullName>
        <label>Acierta CD</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acierta__c</fullName>
        <label>Acierta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acierta_codeudor1__c</fullName>
        <label>Acierta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acierta_codeudor2__c</fullName>
        <label>Acierta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acierta_codeudor3__c</fullName>
        <label>Acierta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ahorro_programado__c</fullName>
        <label>Ahorro programado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Analista__c</fullName>
        <label>Analista</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nazly Trujillo</fullName>
                </value>
                <value>
                    <fullName>Leidy Sierra</fullName>
                </value>
                <value>
                    <fullName>Andrea Riveros</fullName>
                </value>
                <value>
                    <fullName>Sandra Zamora</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ano_carta_definitiva__c</fullName>
        <formula>YEAR( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Año carta definitiva</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ano_comite__c</fullName>
        <formula>YEAR( Fecha_de_comite__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Año</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Antig_edad_en_meses__c</fullName>
        <label>Antigüedad en meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aplica_para_excepcion__c</fullName>
        <label>Aplica para excepción</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aprobado_con_programa_MI_CASA_YA_IC__c</fullName>
        <formula>TEXT(  Cliente_deudor__r.Aprobado_con_programa_MI_CASA_YA__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>¿Aprobado con programa MI CASA YA?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aprobado_con_programa_MI_CASA_YA__c</fullName>
        <label>¿Aprobado con programa MI CASA YA?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asignacion_de_cupo__c</fullName>
        <formula>TEXT(Solicitud_de_credito__r.Oportunidad__r.Asignacion_de_cupo__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asignación de cupo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aumento_de_Monto__c</fullName>
        <label>Aumento de Monto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barrio__c</fullName>
        <formula>Radicacion__r.Barrio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barrio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barrio_vivienda_usada__c</fullName>
        <formula>Solicitud_de_credito__r.Barrio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barrio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cambio_de_condiciones__c</fullName>
        <label>¿Cambio de condiciones?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Canal_digital__c</fullName>
        <formula>TEXT(Solicitud_de_credito__r.Canal_digital__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Canal digital</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_codeudor_1__c</fullName>
        <label>Cargo codeudor 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_codeudor_2__c</fullName>
        <label>Cargo codeudor 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_codeudor_3__c</fullName>
        <label>Cargo codeudor 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo_deudor__c</fullName>
        <label>Cargo deudor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cartas__c</fullName>
        <label>Cartas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carta Aprobación de Cupo</fullName>
                </value>
                <value>
                    <fullName>Carta de Aprobación Vivienda Nueva</fullName>
                </value>
                <value>
                    <fullName>Carta de Aprobación Mejoramiento</fullName>
                </value>
                <value>
                    <fullName>Carta de Aprobación Vivienda Usada</fullName>
                </value>
                <value>
                    <fullName>Carta de Negación</fullName>
                </value>
                <value>
                    <fullName>Carta Definitiva Vivienda Nueva</fullName>
                </value>
                <value>
                    <fullName>Carta Definitiva Compra Cartera</fullName>
                </value>
                <value>
                    <fullName>Carta Definitiva Vivienda Usada</fullName>
                </value>
                <value>
                    <fullName>Carta Definitiva de Mejoramiento</fullName>
                </value>
                <value>
                    <fullName>Carta de Negación Definitiva</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Causal_de_negacion_INCO__c</fullName>
        <label>Causal de negación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01. Inconsistencia en la Información</fullName>
                </value>
                <value>
                    <fullName>02. Cliente no cumple con políticas</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Causal_de_negacion__c</fullName>
        <label>Causal de negación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inconsistencia  en la información</fullName>
                </value>
                <value>
                    <fullName>Cliente no cumple con políticas</fullName>
                </value>
                <value>
                    <fullName>Moras y / o mal manejo en centrales de riesgo</fullName>
                </value>
                <value>
                    <fullName>Imposible verificación</fullName>
                </value>
                <value>
                    <fullName>Cliente no cumple con políticas de endeudamiento</fullName>
                </value>
                <value>
                    <fullName>No cumple con relación crédito vs garantia</fullName>
                </value>
                <value>
                    <fullName>Negación lista clinton</fullName>
                </value>
                <value>
                    <fullName>Inconsistencia en doc de identidad</fullName>
                </value>
                <value>
                    <fullName>Cliente no acepta menor valor</fullName>
                </value>
                <value>
                    <fullName>Cliente desistió del crédito</fullName>
                </value>
                <value>
                    <fullName>Codeudor mal reportado</fullName>
                </value>
                <value>
                    <fullName>Actividad cliente no mercado objetivo</fullName>
                </value>
                <value>
                    <fullName>Cliente no sustenta ingresos</fullName>
                </value>
                <value>
                    <fullName>Cliente no cumple con antigüedad</fullName>
                </value>
                <value>
                    <fullName>Relacion cuota / ingreso disponible &gt; 30%</fullName>
                </value>
                <value>
                    <fullName>Negado comité de excepciones</fullName>
                </value>
                <value>
                    <fullName>No cuenta con ahorro propio suficiente</fullName>
                </value>
                <value>
                    <fullName>Crédito negado por score</fullName>
                </value>
                <value>
                    <fullName>Proyecto no esta aprobado</fullName>
                </value>
                <value>
                    <fullName>Mal hábito de pago con referencias</fullName>
                </value>
                <value>
                    <fullName>No tiene estabilidad laboral</fullName>
                </value>
                <value>
                    <fullName>No tiene capacidad de pago</fullName>
                </value>
                <value>
                    <fullName>Cliente no es asegurable</fullName>
                </value>
                <value>
                    <fullName>No tiene perfil adecuado</fullName>
                </value>
                <value>
                    <fullName>Empresa no tiene el perfil adecuado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Causales_de_negacion__c</fullName>
        <formula>&quot;01. Inconsistencia En La Información&quot;&amp;BR()&amp;
&quot;02. Cliente No Cumple Con Políticas&quot;&amp;BR()&amp;
&quot;03. Moras Y / O Mal Manejo En Centrales De Riesgo&quot;&amp;BR()&amp;
&quot;04. Imposible Verificación&quot;&amp;BR()&amp;
&quot;05. Cliente No Cumple Con Politicas De Endeudamiento&quot;&amp;BR()&amp;
&quot;06. No Cumple Con Relación Crédito Vs Garantia&quot;&amp;BR()&amp;
&quot;07. Negación Lista Clinton&quot;&amp;BR()&amp;
&quot;08. Inconsistencia En Doc De Identidad&quot;&amp;BR()&amp;
&quot;09. Cliente No Acepta Menor Valor&quot;&amp;BR()&amp;
&quot;10. Cliente Desistió Del Crédito&quot;&amp;BR()&amp;
&quot;11. Codeudor Mal Reportado&quot;&amp;BR()&amp;
&quot;12. Actividad Cliente No Mercado Objetivo&quot;&amp;BR()&amp;
&quot;13. Cliente No Sustenta Ingresos&quot;&amp;BR()&amp;
&quot;14. Cliente No Cumple Con Antigüedad&quot;&amp;BR()&amp;
&quot;15. Relación Cuota / Ingreso Disponible &gt; 30%&quot;&amp;BR()&amp;
&quot;16. Negado Comite De Excepciones&quot;&amp;BR()&amp;
&quot;17. No Cuenta Con Ahorro Propio Suficiente&quot;&amp;BR()&amp;
&quot;18. Credito Negado Por Score&quot;&amp;BR()&amp;
&quot;19. Proyecto No Esta Aprobado&quot;&amp;BR()&amp;
&quot;20. Mal Habito De Pago Con Referencias&quot;&amp;BR()&amp;
&quot;21. No Tiene Estabilidad Laboral&quot;&amp;BR()&amp;
&quot;22. No Tiene Capacidad De Pago&quot;&amp;BR()&amp;
&quot;23. Cliente No Es Asegurable&quot;&amp;BR()&amp;
&quot;24. No Tiene Perfil Adecuado&quot;&amp;BR()&amp;
&quot;25. Empresa No Tiene El Perfil Adecuado&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Causales de negación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cesantias__c</fullName>
        <label>Cesantias</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cesantias_propuesta__c</fullName>
        <label>Cesantias</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <formula>Radicacion__r.Ciudad_inmueble__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ciudad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_vivienda_usada__c</fullName>
        <formula>Solicitud_de_credito__r.Ciudad_vivienda_usada__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ciudad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clear__c</fullName>
        <label>Clear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clear_codeudor1__c</fullName>
        <label>Clear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clear_codeudor2__c</fullName>
        <label>Clear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clear_codeudor3__c</fullName>
        <label>Clear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente deudor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Información comité</relationshipLabel>
        <relationshipName>Informacion_comite</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Información comité (Codeudor 1)</relationshipLabel>
        <relationshipName>Informaci_n_comit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Información comité (Codeudor 2)</relationshipLabel>
        <relationshipName>Informacion_comite1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Información comité (Codeudor 3)</relationshipLabel>
        <relationshipName>Informacion_comite3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codigo_de_familia_IC__c</fullName>
        <formula>Cliente_deudor__r.Codigo_Familia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código de familia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Codigo_de_familia__c</fullName>
        <label>Código de familia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compromiso_de_pago__c</fullName>
        <label>Compromiso de pago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Compromisos_de_pago__c</fullName>
        <label>Compromisos de pago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concepto_de_analisis__c</fullName>
        <label>Concepto de análisis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Constructora__c</fullName>
        <label>Constructora</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credito_desistido__c</fullName>
        <label>¿Crédito desistido?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credito_fondo_de_empleados__c</fullName>
        <label>Crédito fondo de empleados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credito_solicitado__c</fullName>
        <label>Crédito solicitado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credito_sugerido__c</fullName>
        <label>Crédito sugerido</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Destino_del_credito__c</fullName>
        <label>Destino del crédito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compra de vivienda vis</fullName>
                </value>
                <value>
                    <fullName>Compra de vivienda no vis</fullName>
                </value>
                <value>
                    <fullName>Compra de vivienda vip</fullName>
                </value>
                <value>
                    <fullName>Compra de vivienda vipa</fullName>
                </value>
                <value>
                    <fullName>Mejoramiento de vivienda</fullName>
                </value>
                <value>
                    <fullName>Leasing habitacional vivienda nueva</fullName>
                </value>
                <value>
                    <fullName>Leasing habitacional vivienda usada</fullName>
                </value>
                <value>
                    <fullName>Compra de vivienda usada</fullName>
                </value>
                <value>
                    <fullName>Compra de cartera hipotecaria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dia_Comite__c</fullName>
        <formula>DAY(Fecha_de_comite__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dia_carta_definitiva__c</fullName>
        <formula>DAY( Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dia carta definitiva</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diferencia_Mejoramiento_Sugerido__c</fullName>
        <label>Diferencia Mejoramiento/Sugerido</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Diferencia_Mejoramiento__c</fullName>
        <label>Diferencia Mejoramiento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direccion_del_inmueble_vivienda_usada__c</fullName>
        <formula>Solicitud_de_credito__r.Direccion_del_inmueble__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección del inmueble</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direccion_residencia__c</fullName>
        <formula>Radicacion__r.Direccion_residencia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección residencia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>El_credito_fue__c</fullName>
        <label>El crédito fue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                    <default>true</default>
                    <label>Pendiente</label>
                </value>
                <value>
                    <fullName>Preaprobado</fullName>
                </value>
                <value>
                    <fullName>Negado</fullName>
                </value>
                <value>
                    <fullName>Aplazado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Credifamilia__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>&quot;credifamiliabogota@credifamilia.com&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_propietario_de_la_solicitud_1__c</fullName>
        <label>Email propietario de la solicitud</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_propietario_de_la_solicitud__c</fullName>
        <formula>Solicitud_de_credito__r.Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email propietario de la solicitud</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero__c</fullName>
        <formula>Gastos_financieros__c / Ingresos_mes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endeudamiento financiero</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero_cuota_propuesta__c</fullName>
        <formula>( Gastos_financieros__c + Valor_cuota_sugerida__c )/ Ingresos_mes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endeudamiento financiero mas cuota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero_mas_cuota__c</fullName>
        <formula>(Gastos_financieros__c +  Valor_cuota_solicitada__c )/ Ingresos_mes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endeudamiento financiero mas cuota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero_mas_cuota_migra__c</fullName>
        <label>Endeudamiento financiero mas cuota migra</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero_migrado__c</fullName>
        <label>Endeudamiento financiero migrado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Endeudamiento_financiero_propuesta__c</fullName>
        <formula>Gastos_financieros__c / Ingresos_mes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endeudamiento financiero</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Entidad_cedente__c</fullName>
        <formula>TEXT(Solicitud_de_credito__r.Oportunidad__r.Entidad_cedente__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entidad cedente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excepcion_VIPA__c</fullName>
        <label>Excepción VIPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
                <value>
                    <fullName>Excepción Tipo 1</fullName>
                </value>
                <value>
                    <fullName>Excepción Tipo 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experiencia_cliente_deudor__c</fullName>
        <formula>Radicacion__r.Tiempo_de_experiencia_en_anos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Experiencia cliente deudor en años</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experiencia_codeudor_1__c</fullName>
        <formula>Radicacion__r.Anos_de_experiencia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Experiencia codeudor 1 en años</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experiencia_codeudor_2__c</fullName>
        <formula>Radicacion__r.Anos_de_experiencia_codeudor2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Experiencia codeudor 2 en años</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experiencia_codeudor_3__c</fullName>
        <formula>Radicacion__r.Anos_de_experiencia_codeudor3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Experiencia codeudor 3 en años</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FNG__c</fullName>
        <label>FNG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Factor_por_millon__c</fullName>
        <label>Factor por millón</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Factor_por_millon_propuesta__c</fullName>
        <label>Factor por millón</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fecha_analisis__c</fullName>
        <label>Fecha análisis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_cambio_de_condiciones__c</fullName>
        <label>Fecha cambio de condiciones</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_carta_definitiva__c</fullName>
        <formula>Solicitud_de_credito__r.Fecha_carta_definitiva_generada__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha carta definitiva</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_comite__c</fullName>
        <label>Fecha de comité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_desistido__c</fullName>
        <label>Fecha de desistido</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_escituras__c</fullName>
        <formula>Solicitud_de_credito__r.Fecha_escrituras__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha escituras</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_pagare__c</fullName>
        <formula>Solicitud_de_credito__r.Fecha_Pagare__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha pagaré</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gastos_financieros__c</fullName>
        <label>Gastos financieros</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Id_Credito__c</fullName>
        <externalId>true</externalId>
        <label>Id Crédito</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Radicacion__c</fullName>
        <externalId>true</externalId>
        <label>Id Radicación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ind_relacion_cuota_ingeso_neto_dispon__c</fullName>
        <formula>Valor_cuota_solicitada__c / Ingreso_neto_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ind. relación cuota/ingeso neto dispon.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ind_relacion_cuota_ingeso_neto_migrado__c</fullName>
        <label>Ind. relación cuota/ingeso neto migrado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ind_relacion_cuota_ingeso_neto_propuesta__c</fullName>
        <formula>Valor_cuota_sugerida__c / Ingreso_neto_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ind. relación cuota/ingeso neto dispon.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ingreso_neto_total__c</fullName>
        <label>Ingreso neto total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ingresos_mes__c</fullName>
        <label>Ingresos  mes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ltv_migrado__c</fullName>
        <label>Ltv migrado</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ltv_solicitado__c</fullName>
        <formula>Radicacion__r.Credito_solicitado_valor_a_financiar__c / Radicacion__r.Valor_total_del_inmueble__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ltv solicitado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>